working on nav bar

--- a/index.html
+++ b/index.html
@@ -2,34 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title> Medium Profile Page </title>
   </head>
   <body>
     <nav>
         <div>
             <img
-              src=""
+              class="logo__img--details"
+              src="https://maxcdn.icons8.com/Share/icon/Logos//medium_logo1600.png"
               alt=" medium logo ">
-            <p>
+            <p class="in__block medium__details">
               Medium
             </p>
-            <a href="#"> Write a Story </a>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+                <div class="nav__float--right">
+                  <a
+                    href="#"
+                    class="story__details"> Write a Story
+                  </a>
+                  <img
+                    class="search__icon--details"           src="http://www.clipartkid.com/images/775/database-clipart-http-www-clker-com-clipart-search-icon-4-html-nyOaLl-clipart.png"
+                    alt="">
+                  <img
+                    class="bell__img--details" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Echo_bell.svg/1024px-Echo_bell.svg.png" alt="">
+                  <img
+                    class="profile__pic--details"
+                    src="assets/profile-pic.jpg"
+                    alt="">
+                </div>
         </div>
-        <div>
-            <a href="#"> For You </a>
-            <a href="#"> Editors' picks </a>
-            <a href="#"> Reading roulette </a>
-            <a href="#"> Mythbusted </a>
-            <a href="#"> Holiday parties </a>
-            <a href="#"> Westworld </a>
-            <a href="#"> Politics </a>
-            <a href="#"> Humor </a>
-            <a href="#"> Top stories </a>
-            <a href="#"> Bookmark </a>
+        <div class="lower__nav--details">
+            <a class="nav__links--details" href="#"> For You </a>
+            <a class="nav__links--details"href="#"> Editors' picks </a>
+            <a class="nav__links--details"href="#"> Reading roulette </a>
+            <a class="nav__links--details"href="#"> Mythbusted </a>
+            <a class="nav__links--details"href="#"> Holiday parties </a>
+            <a class="nav__links--details"href="#"> Westworld </a>
+            <a class="nav__links--details"href="#"> Politics </a>
+            <a class="nav__links--details"href="#"> Humor </a>
+            <a class="nav__links--details"href="#"> Top stories </a>
+            <a class="nav__links--details"href="#"> Bookmark </a>
         </div>
     </nav>
 
