finished van bar, still have some tweeks to do with the top right elements

--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
                 </div>
         </div>
         <div class="lower__nav--details">
-            <a class="nav__links--details" href="#"> For You </a>
-            <a class="nav__links--details"href="#"> Editors' picks </a>
-            <a class="nav__links--details"href="#"> Reading roulette </a>
-            <a class="nav__links--details"href="#"> Mythbusted </a>
-            <a class="nav__links--details"href="#"> Holiday parties </a>
-            <a class="nav__links--details"href="#"> Westworld </a>
-            <a class="nav__links--details"href="#"> Politics </a>
-            <a class="nav__links--details"href="#"> Humor </a>
-            <a class="nav__links--details"href="#"> Top stories </a>
-            <a class="nav__links--details"href="#"> Bookmark </a>
+            <div class="lower__nav--dim">
+                <a class="nav__links--details foryou__details" href="#"> For You </a>
+                <a class="nav__links--details editors__details"href="#"> Editors' picks </a>
+                <a class="nav__links--details reading__details"href="#"> Reading roulette </a>
+                <a class="nav__links--details mythbusted__details"href="#"> Mythbusted </a>
+                <a class="nav__links--details holiday__details"href="#"> Holiday parties </a>
+                <a class="nav__links--details westworld__details"href="#"> Westworld </a>
+                <a class="nav__links--details politics__details"href="#"> Politics </a>
+                <a class="nav__links--details humor__details"href="#"> Humor </a>
+                <a class="nav__links--details top__details"href="#"> Top stories </a>
+                <a class="nav__links--details bookmark__details"href="#"> Bookmark </a>
+            </div>
         </div>
     </nav>
 
